Fix for wcard checkbox overlapping filter checkboxes in mobile view

--- a/src/components/wcag-card/WcagCard.scss
+++ b/src/components/wcag-card/WcagCard.scss
@@ -11,6 +11,10 @@
     border-right: 2px solid rgba($color: black, $alpha: 0.1);
   }
 
+  .card-checkbox-container {
+    z-index: 0;
+  }
+
   .long-description {
     margin-top: 0;
   }
